fix_routes_and_html

--- a/app/views/users/registration.html.haml
+++ b/app/views/users/registration.html.haml
@@ -7,34 +7,34 @@
       .container__signup-panel__main__form
         .container__signup-panel__main__form__item
           %p ニックネーム
-          %span(class="form-require") 必須
+          %span.form-require 必須
           .form-block
             %input(type="nickname" name="nickname" vale="" placeholder="例）FURIMA太郎" class="input-form")
         .container__signup-panel__main__form__item
           %p メールアドレス
-          %span(class="form-require") 必須
+          %span.form-require 必須
           .form-block
             %input(type="email" name="mail" vale="" placeholder="PC・携帯どちらでも可" class="input-form")
         .container__signup-panel__main__form__item
           %p パスワード
-          %span(class="form-require") 必須
+          %span.form-require 必須
           .form-block
             %input(type="password" name="password" vale="" placeholder="パスワード" class="input-form")
         .container__signup-panel__main__form__item
           %p お名前（全角）
-          %span(class="form-require") 必須
+          %span.form-require 必須
           .form-block
             %input(type="last_name" name="last_name" vale="" placeholder="例）山田" class="input-form name-form")>
             %input(type="first_name" name="first_name" vale="" placeholder="例）太郎" class="input-form name-form")
         .container__signup-panel__main__form__item
           %p お名前カナ（全角）
-          %span(class="form-require") 必須
+          %span.form-require 必須
           .form-block
             %input(type="last_name_jp" name="last_name_jp" vale="" placeholder="例）ヤマダ" class="input-form name-form")>
             %input(type="first_name_jp" name="first_name_jp" vale="" placeholder="例）タロウ" class="input-form name-form")
         .container__signup-panel__main__form__item
           %p 生年月日
-          %span(class="form-require") 必須
+          %span.form-require 必須
           .form-block
             %input(type="birth_year" name="birth_year" vale="" placeholder="1900" class="input-form birth-form")
             %span 年
@@ -44,7 +44,7 @@
             %span 日
         .container__signup-panel__main__form__item
           %p 電話番号
-          %span(class="form-require") 必須
+          %span.form-require 必須
           .form-block
             %input(type="phone_number" name="phone_number" vale="" placeholder="" class="input-form")
         .container__signup-panel__main__form__btn
