--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,2 +1,2 @@
-= link_to "新規会員登録", users_registration_path, class: "registaration__btn"
-= link_to "ログイン", users_signin_path, class: "signin__btn"
+= link_to "新規会員登録", new_user_registration_path, class: "registaration__btn"
+= link_to "ログイン", new_user_session_path, class: "signin__btn"
