fix_confilict_scss

--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -2,6 +2,19 @@
   box-sizing: border-box;
 }
 
+body {
+  height: 100%;
+}
+
+html {
+  height: 100%;
+}
+
+.signin-wrapper {
+  background-color: #f8f8f8;
+  height: 100%;
+}
+
 .registration-header {
   height: 128px;
   text-align: center;
