--- a/app/views/top/_exhibition.html.haml
+++ b/app/views/top/_exhibition.html.haml
@@ -1,6 +1,5 @@
 .exhibition
   .exhibition__btn
-    .exhibition__btn--text
+    %span.exhibition__btn--text
       出品する
-    .exhibition__btn--icon
-    = image_tag 'icon_camera.png', class: 'exhibition_icon' ,size: '54x54'
+    = image_tag 'icon_camera.png', class: 'exhibition__btn--icon' ,size: '54x54'
