--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -14,10 +14,11 @@
       align-items: center;
       &__icon {
         vertical-align: bottom;
+        margin-right: 30px;
       }
       &__search {
-        width: calc(100% - 26px);
-        padding: 0 0 0 50px;
+        height: 36px;
+        width: 100%;
         display: flex;
         position: relative;
         align-items: center;
@@ -25,14 +26,15 @@
         &--box{
           margin-left: auto;
           width: 100%;
-          height: 34px;
-          border: 1px solid rgb(216, 169, 169);
+          height: 36px;
+          border: 1px solid lightgrey;
           align-items: center;
           box-sizing: border-box;
+          padding-left: 5px;
         }
         &--btn {
-          height: 18px;
-          width: 18px;
+          width: 36px;
+          height: 36px;
           border: 0;
           cursor: pointer;
           background-color: #3CCACE;
@@ -66,11 +68,16 @@
       &__right{
         display: flex;
         line-height: 38px;
+        a {
+          text-decoration: none;
+          font-size: 14px;
+          color: #333333;
+        }
         &--login {
           padding: 0 0 0 16px;
         }
         &--new {
-          padding: 0 0 0 24px;
+          padding: 0 0 0 16px;
         }
       }
     }
