--- a/app/assets/stylesheets/top/_exhibition.scss
+++ b/app/assets/stylesheets/top/_exhibition.scss
@@ -1,8 +1,8 @@
 .exhibition{
   box-sizing: border-box;
   &__btn{
-    width: 90px;
-    height: 80px;
+    width: 120px;
+    height: 116px;
     background: #3CCACE;
     text-align: center;
     border-radius: 4%;
@@ -12,6 +12,16 @@
     padding: 15px;
     &--text{
       color: #ffffff;
+      width: 90px;
+      height: 27px;
+      display: block;
+      font-size: 18px;
+      margin-bottom: 5px;
+    }
+    &--icon {
+      display: block;
+      width: 60%;
+      margin: 0 auto;
     }
   }
 }
