--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,6 +17,6 @@
           ブランド
       .navigation__right
         %li.navigation__right--login
-          ログイン
+          = link_to "ログイン", new_user_session_path
         %li.navigation__right--new
-          新規会員登録
+          = link_to "新規会員登録", new_user_registration_path
