rails_version_down
railsのバージョンをv6.0.1からv5.0.7.2へダウングレードしました。
これにより削除されたファイルや不要になった記載が発生しています。

--- a/app/assets/stylesheets/modules/products.scss
+++ b/app/assets/stylesheets/modules/products.scss
@@ -3,10 +3,9 @@
 }
 
 .products-wall {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: scroll;
   background-color: rgb(245, 245, 245);
 
   .products-header {
@@ -16,9 +15,6 @@
     justify-content: center;
     text-align: center;
     align-items: center;
-    &__logo {
-
-    }
   }
 
   .products-contents {
