--- a/app/assets/stylesheets/top/_exhibition.scss
+++ b/app/assets/stylesheets/top/_exhibition.scss
@@ -10,6 +10,8 @@
     right: 32px;
     position: fixed;
     padding: 15px;
+    text-decoration: none;
+    
     &--text{
       color: #ffffff;
       width: 90px;
@@ -17,6 +19,7 @@
       display: block;
       font-size: 18px;
       margin-bottom: 5px;
+
     }
     &--icon {
       display: block;
