--- a/app/assets/stylesheets/top/_main.scss
+++ b/app/assets/stylesheets/top/_main.scss
@@ -112,7 +112,7 @@
     }
   }
   .topmiddle{
-    background-image: url(bg-topMiddleDl-pict.jpg);
+    background-image: image-url('bg-topMiddleDl-pict.jpg');
     background-position: bottom right;
     height: 400px;
     background-size: cover;
