--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -4,7 +4,9 @@
 li.mypage-item-not-found{
   list-style: none;
   width: 700px;
-  background-image: url(https://www.mercari.com/jp/assets/img/common/common/logo-gray-icon.svg?52408201);
+  background-image: url("logo.png");
+  background-size: contain;
+// 背景画像のみを透過させる方法がわからん！
   background-repeat: no-repeat;
   background-position: center 40px;
   background-color: #fff;
@@ -14,16 +16,18 @@ li.mypage-item-not-found{
   color: #ccc;
 }
 body{
-  background-color: #f5f5f5;
+  background-color: #f8f8f8;
+  a{text-decoration: none;
+  }
+
   main{
     .mypage-container{
       margin: 0 auto;
-      height: 1252px;
+      height: 1450px;
       width: 1020px;
       padding: 40px 0 40px;
       &__content{
         float: right;
-        background-color: #f5f5f5;
         width: 700px;
         &-user-icon{
           background-image: url("https://www.mercari.com/jp/assets/img/mypage/user-bg.jpg?52408201");
@@ -81,14 +85,13 @@ body{
           width: 700px;
           padding:0 16px;
           box-sizing: border-box;
-          background: #fafafa;
+          background: #f8f8f8;
           font-size: 16px;
           line-height: 72px;
         }
         &-tabs{
           height: 72px;
           width:700px;
-          display: inline-block;
           box-sizing: border-box;
           li{
             width: 50%;
@@ -101,7 +104,7 @@ body{
               display: block;
               color: #333;
               text-align: center;
-              background-color: #eee;
+              background-color: #f8f8f8;
               height: 74px;
             }
           }
