--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,5 +6,6 @@
 @import "top/exhibition";
 @import "footer";
 @import "modules/products";
+@import "users";
 @import "font-awesome-sprockets";
 @import "font-awesome";
