--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,9 @@
 @import "reset";
 @import "modules/users";
 @import "header";
-@import "top/main";
-@import "top/banner";
-@import "top/exhibition";
+@import "tops/main";
+@import "tops/banner";
+@import "tops/exhibition";
 @import "footer";
 @import "modules/products";
 @import "font-awesome-sprockets";
