--- a/app/views/top/_main.html.haml
+++ b/app/views/top/_main.html.haml
@@ -9,6 +9,7 @@
         フリマアプリです
       .mainvisual__content__icons
         .mainvisual__content__icons--icon
+        =link_to new_credit_path, class: "credit_btn" do
           = image_tag 'app_store_pic.svg', class: 'mainvisual__appstore_icon',size: '180x52'
         .mainvisual__content__icons--icon
           = image_tag 'google_pic.svg', class: 'mainvisual__google_icon',size: '180x52'
