credit-image_chenge-code

--- a/app/views/credit/_credit.html.haml
+++ b/app/views/credit/_credit.html.haml
@@ -10,13 +10,13 @@
           必須
         %input.chapter-inner__creditcard-number__box{placeholder: "半角数字のみ", type: "text"}
         .chapter-inner__creditcard-number__images
-          = image_tag 'visa.svg', class: 'creditcard-pic1' ,size: '32x20'
-          = image_tag 'master-card.svg', class: 'creditcard-pic2' ,size: '32x20'
-          = image_tag 'saison-card.svg', class: 'creditcard-pic3' ,size: '32x20'
-          = image_tag 'jcb.svg', class: 'creditcard-pic4' ,size: '32x20'
-          = image_tag 'american_express.svg', class: 'creditcard-pic5' ,size: '32x20'
-          = image_tag 'dinersclubbb.svg', class: 'creditcard-pic6' ,size: '32x20'
-          = image_tag 'discover.svg', class: 'creditcard-pic7' ,size: '32x20'
+          = image_tag 'credit-image/visa.svg', class: 'creditcard-pic1' ,size: '32x20'
+          = image_tag 'credit-image/master-card.svg', class: 'creditcard-pic2' ,size: '32x20'
+          = image_tag 'credit-image/saison-card.svg', class: 'creditcard-pic3' ,size: '32x20'
+          = image_tag 'credit-image/jcb.svg', class: 'creditcard-pic4' ,size: '32x20'
+          = image_tag 'credit-image/american_express.svg', class: 'creditcard-pic5' ,size: '32x20'
+          = image_tag 'credit-image/dinersclubbb.svg', class: 'creditcard-pic6' ,size: '32x20'
+          = image_tag 'credit-image/discover.svg', class: 'creditcard-pic7' ,size: '32x20'
       .chapter-inner__expiration-date
         有効期限
         .chapter-head__required
