--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -164,13 +164,15 @@ html {
               color: #0099E8;
             }
           }
+          input {
+            width: 100%;
+          }
         }
       }
     }
   }
   .submit-btn {
     margin-top: 24px;
-    width: 100%;
     height: 48px;
     background-color: #3CCACE;
     cursor: pointer;
