--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -119,8 +119,9 @@ html {
             background-color: red;
             font-size: 12px;
             color: #fff;
-            padding: 2px 4px;
+            padding: 3px 4px;
             margin-left: 8px;
+            border-radius: 2px;
           }
           .input-form {
             width: 100%;
@@ -148,6 +149,11 @@ html {
           .birth-form {
             width: 76px;
             text-align: center;
+          }
+          .error_message{
+            color:red;
+            font-size: 14px;
+            margin: 8px 0 0;
           }
         }
         &__item:first-of-type {
