--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -4,50 +4,85 @@
     .container__signup-panel__header
       %h2 会員情報入力
     = form_for(@user, url: registration_path(resource_name), html: {class: "container__signup-panel__main"}) do |f|
-      = devise_error_messages!
+      
+      // エラーメッセージ全てをリスト表示
+      -# %ul.error-messages
+      -# - @user.errors.full_messages.each do |message|
+      -#   %li.error-message= message
+
       .container__signup-panel__main__form
         .container__signup-panel__main__form__item
           %p ニックネーム
+          %span<>
           %span.form-require 必須
           .form-block
             = f.text_field :nickname, class: "input-form", autocomplete: "nickname", placeholder: "例）FURIMA太郎"
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "nickname"}
+        
         .container__signup-panel__main__form__item
           %p メールアドレス
+          %span<>
           %span.form-require 必須
           .form-block
             = f.email_field :email, class: "input-form", autocomplete: "email", placeholder: "PC・携帯どちらでも可"
+          - if @user.errors.full_messages_for(:email).any?
+            - unless @user.valid?
+              %ul
+                %li.error_message フォーマットが不適切です
+
         .container__signup-panel__main__form__item
           %p パスワード
+          %span<>
           %span.form-require 必須
           .form-block
-            = f.password_field :password, class: "input-form", autocomplete: "password", placeholder: "パスワード"
+            = f.password_field :password, class: "input-form", autocomplete: "password", placeholder: "7文字以上の半角英数字"
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "password"}
+
+        .container__signup-panel__main__form__item
+          %p パスワード（確認用）
+          %span<>
+          %span.form-require 必須
+          .form-block
+            = f.password_field :password, class: "input-form", autocomplete: "password_confirmation", placeholder: "7文字以上の半角英数字"
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "password_confirmation"}
+
         .container__signup-panel__main__form__item
           %p お名前（全角）
+          %span<>
           %span.form-require 必須
           .form-block.name-forms
             = f.text_field :last_name, class: "input-form name-form", autocomplete: "last_name", placeholder: "例）山田"
             = f.text_field :first_name, class: "input-form name-form", autocomplete: "first_name", placeholder: "例）太郎"
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "last_name"}
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "first_name"}
+
         .container__signup-panel__main__form__item
           %p お名前カナ（全角）
+          %span<>
           %span.form-require 必須
           .form-block.name-forms
             = f.text_field :last_name_jp, class: "input-form name-form", autocomplete: "last_name_jp", placeholder: "例）ヤマダ"
             = f.text_field :first_name_jp, class: "input-form name-form", autocomplete: "first_name_jp", placeholder: "例）タロウ"
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "last_name_jp"}
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "first_name_jp"}
+
+        -# TODO 日付を閏年に対応させること
         .container__signup-panel__main__form__item
           %p 生年月日
+          %span<>
           %span.form-require 必須
           .form-block
-            = f.text_field :birth_year, class: "input-form birth-form", autocomplete: "birth_year", placeholder: "1900"
-            %span 年
-            = f.text_field :birth_month, class: "input-form birth-form", autocomplete: "birth_month", placeholder: "01"
-            %span 月
-            = f.text_field :birth_day, class: "input-form birth-form", autocomplete: "birth_day", placeholder: "01"
-            %span 日
+            != sprintf(f.date_select(:birth_date, {prompt:"--", use_month_numbers: true, start_year: Time.now.year, end_year: 1950, date_separator: '%s'}, {class: "input-form birth-form"}), '年 ', '月 ') + '日'
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "birth_date"}
+
+        -# TODO 電話番号のバリデーション（正規表現）を入れること
         .container__signup-panel__main__form__item
           %p 電話番号
           .form-block
-            = f.text_field :phone_number, class: "input-form", autocomplete: "phone_number", placeholder: ""
+            = f.text_field :phone_number, class: "input-form", autocomplete: "phone_number", placeholder: "電話番号を入力"
+
         .container__signup-panel__main__form__btn
           %p 「会員登録」のボタンを押すことにより<a href="#">利用規約</a>に同意したものとみなします
           = button_tag "会員登録", type: "submit", class: "submit-btn"
+
 = render partial: 'layouts/signin_registration_footer.html'
