--- a/app/views/users/shared/_error_messages.html.haml
+++ b/app/views/users/shared/_error_messages.html.haml
@@ -1,9 +1,9 @@
-- if resource.errors.any?
-  #error_explanation
-    %h2
-      = I18n.t("errors.messages.not_saved",                 |
-        count: resource.errors.count,                       |
-        resource: resource.class.model_name.human.downcase) |
-    %ul
-      - resource.errors.full_messages.each do |message|
-        %li= message
+// エラーメッセージを表示する（renderで呼び出してください）
+- if user.errors.any?
+  - unless user.valid?
+    - if errors = user.errors.full_messages_for(column.to_sym)
+      %ul.error_messages
+        - errors.each do |error|
+          %li.error_message= error
+// 呼び出し例
+-# = render partial: 'error_messages', locals: {user: @user, column: "nickname"}
