--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,5 +7,6 @@
 @import "footer";
 @import "modules/products";
 @import "userspage";
+@import "logout";
 @import "font-awesome-sprockets";
 @import "font-awesome";
