--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,14 +1,7 @@
 %body
-  = render 'layouts/header'
-  -# %nav#subNav
-  -#   %ul.subNavUl
-  -#     %li
-  -#       %a
-  -#         %span メルカリ
-  -#     %li
-  -#       %a
-  -#         %span.active マイページ
+  = render "layouts/header"
 
+  -# メイン
   %main
     .mypage-container.clearfix
       .mypage-container__content
@@ -63,112 +56,14 @@
                   %i.fa.fa-angle-right.icon
               %li#gotoAllList
                 %a#gotoAllList-inner{href: ""} 一覧を見る
-
-      .mypage-container__side
-        %nav.mypage-nav
-          %ul.mypage-nav-list
-            %li
-              %a.mypage-nav-list-item.active{href: ""}
-                マイページ
-                %i.fa.fa-angle-right.icon.active
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                お知らせ
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                やることリスト
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                いいね！一覧
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                出品する
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                出品した商品 - 出品中
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                出品した商品 - 取引中
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                出品した商品 - 売却済み
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                購入した商品 - 取引中
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                購入した商品 - 過去の取引
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                ニュース一覧
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                評価一覧
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                ガイド
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                お問い合わせ
-                %i.fa.fa-angle-right.icon
-          %h3.mypage-nav-head 売上・ポイント
-          %ul.mypage-nav-list
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                売上・振込申請
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                ポイント
-                %i.fa.fa-angle-right.icon
-          %h3.mypage-nav-head 設定
-          %ul.mypage-nav-list
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                プロフィール
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                住所変更
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                支払い方法
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                メール/パスワード
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                本人情報
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                電話番号の確認
-                %i.fa.fa-angle-right.icon
-            %li
-              %a.mypage-nav-list-item{href: ""}
-                ログアウト
-                %i.fa.fa-angle-right.icon
+      -# サイドバー
+      = render "layouts/sideber"
 
   -# バナー
-  = render 'top/banner'
+  = render "top/banner"
 
   -# エキシビジョン
-  = render 'top/exhibition'
+  = render "top/exhibition"
 
   -# フッター
   = render "layouts/footer"
