--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -9,7 +9,7 @@
           .mypage-container__main__box__title
             %form.mypage-container__main__box__title__inner
               .mypage-container__main__box__title__inner__content
-              -# あとでcurrent_user_destroy_path に変更する
+                -# あとでcurrent_user_destroy_path? に変更する
                 = link_to 'ログアウト',user_session_path,method: :delete,class: "mypage-container__main__box__title__inner__content__btn submit-btn submit-btn-red"
       -# サイドバー
       = render "layouts/sideber"
