画像用テーブルを作成
画像用テーブルを作成
アップロードするための処理を記載中。

--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -10,6 +10,7 @@
             .products-contents__main-image__title-required
               必須
           .products-contents__main-image__text
+          = f.fields_for :product_image do |m|
             最大10枚までアップロードできます
             .products-contents__main-image__box
               .products-contents__main-image__box-input
