--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -35,7 +35,7 @@
           %span<>
           %span.form-require 必須
           .form-block
-            = f.password_field :password, class: "input-form", autocomplete: "password", placeholder: "7文字以上の半角英数字"
+            = f.password_field :password, class: "input-form", autocomplete: "new-password", placeholder: "7文字以上の半角英数字"
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "password"}
 
         .container__signup-panel__main__form__item
@@ -43,8 +43,7 @@
           %span<>
           %span.form-require 必須
           .form-block
-            = f.password_field :password, class: "input-form", autocomplete: "password_confirmation", placeholder: "7文字以上の半角英数字"
-          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "password_confirmation"}
+            = f.password_field :password_confirmation, class: "input-form", autocomplete: "new-password", placeholder: "7文字以上の半角英数字"
 
         .container__signup-panel__main__form__item
           %p お名前（全角）
@@ -66,7 +65,7 @@
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "last_name_jp"}
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "first_name_jp"}
 
-        -# TODO 日付を閏年に対応させること
+        // TODO 日付を閏年に対応させる
         .container__signup-panel__main__form__item
           %p 生年月日
           %span<>
@@ -75,7 +74,7 @@
             != sprintf(f.date_select(:birth_date, {prompt:"--", use_month_numbers: true, start_year: Time.now.year, end_year: 1950, date_separator: '%s'}, {class: "input-form birth-form"}), '年 ', '月 ') + '日'
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "birth_date"}
 
-        -# TODO 電話番号のバリデーション（正規表現）を入れること
+        // TODO 電話番号のバリデーション（正規表現）を入れる
         .container__signup-panel__main__form__item
           %p 電話番号
           .form-block
