--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -16,7 +16,7 @@
           %span<>
           %span.form-require 必須
           .form-block
-            = f.text_field :nickname, class: "input-form", autocomplete: "nickname", placeholder: "例）FURIMA太郎"
+            = f.text_field :nickname, autocomplete: "nickname", class: "input-form", placeholder: "例）FURIMA太郎"
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "nickname"}
         
         .container__signup-panel__main__form__item
@@ -24,7 +24,7 @@
           %span<>
           %span.form-require 必須
           .form-block
-            = f.email_field :email, class: "input-form", autocomplete: "email", placeholder: "PC・携帯どちらでも可"
+            = f.email_field :email, autocomplete: "email", class: "input-form", placeholder: "PC・携帯どちらでも可"
           - if @user.errors.full_messages_for(:email).any?
             - unless @user.valid?
               %ul
@@ -35,23 +35,26 @@
           %span<>
           %span.form-require 必須
           .form-block
-            = f.password_field :password, class: "input-form", autocomplete: "new-password", placeholder: "7文字以上の半角英数字"
-          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "password"}
+            = f.password_field :password, autocomplete: "new-password", class: "input-form", placeholder: "7文字以上の半角英数字", minlength: 7
+          - if @user.errors.full_messages_for(:password).any?
+            - unless @user.valid?
+              %ul
+                %li.error_message パスワードを入力してください
 
         .container__signup-panel__main__form__item
-          %p パスワード（確認用）
+          %p パスワード（確認）
           %span<>
           %span.form-require 必須
           .form-block
-            = f.password_field :password_confirmation, class: "input-form", autocomplete: "new-password", placeholder: "7文字以上の半角英数字"
+            = f.password_field :password_confirmation, autocomplete: "new-password", class: "input-form", placeholder: "7文字以上の半角英数字", minlength: 7
 
         .container__signup-panel__main__form__item
           %p お名前（全角）
           %span<>
           %span.form-require 必須
           .form-block.name-forms
-            = f.text_field :last_name, class: "input-form name-form", autocomplete: "last_name", placeholder: "例）山田"
-            = f.text_field :first_name, class: "input-form name-form", autocomplete: "first_name", placeholder: "例）太郎"
+            = f.text_field :last_name, autocomplete: "family-name", class: "input-form name-form", placeholder: "例）山田"
+            = f.text_field :first_name, autocomplete: "given-name", class: "input-form name-form", placeholder: "例）太郎"
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "last_name"}
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "first_name"}
 
@@ -60,8 +63,8 @@
           %span<>
           %span.form-require 必須
           .form-block.name-forms
-            = f.text_field :last_name_jp, class: "input-form name-form", autocomplete: "last_name_jp", placeholder: "例）ヤマダ"
-            = f.text_field :first_name_jp, class: "input-form name-form", autocomplete: "first_name_jp", placeholder: "例）タロウ"
+            = f.text_field :last_name_jp, autocomplete: "family-name", class: "input-form name-form", placeholder: "例）ヤマダ"
+            = f.text_field :first_name_jp, autocomplete: "given-name", class: "input-form name-form", placeholder: "例）タロウ"
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "last_name_jp"}
           = render partial: 'users/shared/error_messages', locals: {user: @user, column: "first_name_jp"}
 
@@ -78,7 +81,7 @@
         .container__signup-panel__main__form__item
           %p 電話番号
           .form-block
-            = f.text_field :phone_number, class: "input-form", autocomplete: "phone_number", placeholder: "電話番号を入力"
+            = f.text_field :phone_number, autocomplete: "tel-national", class: "input-form", placeholder: "電話番号を入力"
 
         .container__signup-panel__main__form__btn
           %p 「会員登録」のボタンを押すことにより<a href="#">利用規約</a>に同意したものとみなします
