--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -174,8 +174,12 @@ html {
               color: #0099E8;
             }
           }
+          button {
+            margin-top: 24px;
+          }
           input {
             width: 100%;
+            height: 48px;
           }
         }
       }
@@ -184,6 +188,7 @@ html {
   .submit-btn {
     margin-top: 24px;
     height: 48px;
+    width: 100%;
     background-color: #3CCACE;
     cursor: pointer;
     font-size: 14px;
