--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -85,6 +85,6 @@
 
         .container__signup-panel__main__form__btn
           %p 「会員登録」のボタンを押すことにより<a href="#">利用規約</a>に同意したものとみなします
-          = button_tag "会員登録", type: "submit", class: "submit-btn"
+          = button_tag "会員登録", type: "submit", class: "container__signup-panel__main__form__btn submit-btn"
 
 = render partial: 'layouts/signin_registration_footer.html'
